<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DirectChat</string>
    <string name="close_communication">Close communication</string>
    <string name="communication_interrupted">The communication was interrupted!</string>
    <string name="gallery">Gallery</string>
    <string name="loading_dialog">Please wait: I am starting communication</string>

    <string name="necessary_permission_setting">The application requires necessary permission to run (LOCATION). \nYou have denied this permission permanently. \nGo to settings to allow location permission</string>
    <string name="necessary_permission_retry">The application requires necessary permission to run \nPlease give me the permission to run the app</string>
    <string name="retry_permission">OK, ask me again for necessary permission</string>
    <string name="deny_permission">No, close the app.</string>
    <string name="already_connected">You are already connected to another device. Disconnect to start another communication</string>
    <string name="internal_error_sending">Internal error: you can not send this file</string>
    <string name="starting_notification_title">Starting communication</string>
    <string name="notification_title">Communication with: %1$s</string>
    <string name="notification_content">You have %1$d new message</string>
    <string name="device_available">Available: tap to connect</string>
    <string name="device_invited">Invited: i am trying to connect to it. Tap to stop invitation</string>
    <string name="device_connected">Connected: tap to open chat</string>
    <string name="device_failed">Failed</string>
    <string name="device_unavailable">Unavailable</string>
    <string name="device_unknown">Unknown</string>
    <string name="backup_chats">BACKUP CHATS</string>
    <string name="discovery">DISCOVERY</string>
    <string name="need_to_go_to_settings">OK</string>
    <string name="audio">Audio</string>
    <string name="general_file">General file</string>
    <string name="share_content">Share content</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="delete_message">Delete message</string>
    <string name="more_messages_selected">%1$d messages selected</string>
    <string name="one_message_selected">1 message selected</string>
    <string name="more_chats_selected">%1$d chats selected</string>
    <string name="one_chat_selected">1 chat selected</string>
    <string name="chose_msg_type">Choose the type of messages you want to show</string>
    <string name="text_messages">Text messages</string>
    <string name="image_messages">Image messages</string>
    <string name="video_messages">Video messages</string>
    <string name="rec_messages">Recording messages</string>
    <string name="audio_messages">Audio messages</string>
    <string name="general_file_messages">General file messages</string>
    <string name="ok_choose_type">Select</string>
    <string name="cancel_choose_type">Cancel</string>
    <string name="show_all_messages">I  am showing all messages</string>
    <string name="show_type_messages">I am showing: %1$s</string>
    <string name="all_messages">All messages</string>
    <string name="show_only">Show only</string>
    <string name="text_copied_clipboard">Text was copied to clipboard</string>
    <string name="sharedFrom">Shared from DirectChat</string>
    <string name="no_app_available">You do not have app to open this file</string>
    <string name="wifi_off">WiFi-direct is disabled</string>
    <string name="about">About page</string>
    <string name="app_description">DirectChat is a simple application to exchange text messages, video, images, audio and any other type of file quickly and without any need for an internet connection!</string>
    <string name="github_page">GitHub page</string>
    <string name="created_by">Created by Luca Rizzo</string>
    <string name="save_settings">Save settings</string>
    <string name="save_image_to_gallery">Also save received images in the shared Pictures folder</string>
    <string name="save_video_to_gallery">Also save received videos in the shared Movies folder</string>
    <string name="save_audio_to_audio_player">Also save received audios in the shared Music folder</string>
    <string name="save_file_to_download">Also save received general files in the shared Download folder</string>
    <string name="settings_item">Settings</string>
    <string name="message">Message</string>
    <string name="sending_file">I am sending %1$s</string>
    <string name="need_rec_permission">You must give me the permission to record an audio and send this in a message.</string>
    <string name="need_rec_permission_perm_denied">You must give me the permission to record an audio and send this in a message. \nYou have denied the permission permanently. \nGo to settings to allow recording permission</string>
    <string name="retry_permission_no_necessary">OK, ask me again for this permission</string>
    <string name="deny_permission_no_necessary">No, i do not want</string>
    <string name="need_storage_permission">You must give me permissions to access the storage to activate this feature.</string>
    <string name="need_storage_permission_perm_denied">You must give me permissions to access the storage to activate this feature. \nYou have denied the permission permanently. \nGo to settings to allow storage permission</string>
    <string name="starting_deleting_chats">I am deleting chats and associated files. The operation may take some time</string>
    <string name="can_record">Now you can record and send the recordings in messages</string>
    <string name="location_off">The location is off. Turn it on from settings to view the list of peers near you</string>
</resources>